// ヘルスチェック
syntax = "proto3";

package api.game;

import "health/commonHealth/common_health_enum.proto";

message CommonHealth {
  int64 health_id = 1;
  string name = 2;
  CommonHealthEnum common_health_enum = 3;
}
